# DVA315_LABS

./: CMakeLists.txt  main.c  wrapper.c  wrapper.h
Lab1/: main.c
Lab2/: main.c
Lab3/: How to get Lab 3 to compile.txt  wrapper.c  wrapper.h
Lab3/Client/: main.c
Lab3/Server/: main.c
Lab3_CLIENT/: main.c
Lab3_SERVER/: main.c
Lab4/: Here's what I passed the lab with  main.c
Lab5/: main.c
